<resources>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
    <string name="ic_airplane_mode_off">&#xe00b;</string>
    <string name="ic_airplane_mode_on">&#xe00c;</string>
    <string name="ic_android">&#xe00d;</string>
    <string name="ic_apps">&#xe00e;</string>
    <string name="ic_archive">&#xe00f;</string>
    <string name="ic_arrow_back">&#xe010;</string>
    <string name="ic_arrow_drop_down">&#xe011;</string>
    <string name="ic_arrow_drop_down_circle">&#xe012;</string>
    <string name="ic_arrow_drop_up">&#xe013;</string>
    <string name="ic_arrow_forward">&#xe014;</string>
    <string name="ic_attachment">&#xe015;</string>
    <string name="ic_auto_fix">&#xe016;</string>
    <string name="ic_backspace">&#xe017;</string>
    <string name="ic_backup">&#xe018;</string>
    <string name="ic_beenhere">&#xe019;</string>
    <string name="ic_block">&#xe01a;</string>
    <string name="ic_bluetooth">&#xe01b;</string>
    <string name="ic_bluetooth_audio">&#xe01c;</string>
    <string name="ic_bluetooth_connected">&#xe01d;</string>
    <string name="ic_bluetooth_disabled">&#xe01e;</string>
    <string name="ic_bluetooth_searching">&#xe01f;</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_book">&#xe021;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_bookmark_outline">&#xe023;</string>
    <string name="ic_brightness_auto">&#xe024;</string>
    <string name="ic_brightness_high">&#xe025;</string>
    <string name="ic_brightness_low">&#xe026;</string>
    <string name="ic_brightness_medium">&#xe027;</string>
    <string name="ic_bug_report">&#xe028;</string>
    <string name="ic_cake">&#xe029;</string>
    <string name="ic_call">&#xe02a;</string>
    <string name="ic_call_end">&#xe02b;</string>
    <string name="ic_call_made">&#xe02c;</string>
    <string name="ic_call_merge">&#xe02d;</string>
    <string name="ic_call_missed">&#xe02e;</string>
    <string name="ic_call_received">&#xe02f;</string>
    <string name="ic_call_split">&#xe030;</string>
    <string name="ic_camera">&#xe031;</string>
    <string name="ic_camera_alt">&#xe032;</string>
    <string name="ic_camera_roll">&#xe033;</string>
    <string name="ic_cancel">&#xe034;</string>
    <string name="ic_cast">&#xe035;</string>
    <string name="ic_cast_connected">&#xe036;</string>
    <string name="ic_chat">&#xe037;</string>
    <string name="ic_check">&#xe038;</string>
    <string name="ic_check_box">&#xe039;</string>
    <string name="ic_check_box_blank">&#xe03a;</string>
    <string name="ic_check_box_outline">&#xe03b;</string>
    <string name="ic_check_box_outline_blank">&#xe03c;</string>
    <string name="ic_check_circle">&#xe03d;</string>
    <string name="ic_check_circle_blank">&#xe03e;</string>
    <string name="ic_check_circle_outline">&#xe03f;</string>
    <string name="ic_check_circle_outline_blank">&#xe040;</string>
    <string name="ic_chevron_left">&#xe041;</string>
    <string name="ic_chevron_right">&#xe042;</string>
    <string name="ic_chromecast">&#xe043;</string>
    <string name="ic_circles">&#xe044;</string>
    <string name="ic_circles_add">&#xe045;</string>
    <string name="ic_circles_extended">&#xe046;</string>
    <string name="ic_clear">&#xe047;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_close_caption">&#xe049;</string>
    <string name="ic_cloud">&#xe04a;</string>
    <string name="ic_cloud_circle">&#xe04b;</string>
    <string name="ic_cloud_done">&#xe04c;</string>
    <string name="ic_cloud_download">&#xe04d;</string>
    <string name="ic_cloud_off">&#xe04e;</string>
    <string name="ic_cloud_queue">&#xe04f;</string>
    <string name="ic_cloud_upload">&#xe050;</string>
    <string name="ic_comment">&#xe051;</string>
    <string name="ic_communities">&#xe052;</string>
    <string name="ic_content_copy">&#xe053;</string>
    <string name="ic_content_cut">&#xe054;</string>
    <string name="ic_content_paste">&#xe055;</string>
    <string name="ic_create">&#xe056;</string>
    <string name="ic_credit_card">&#xe057;</string>
    <string name="ic_crop">&#xe058;</string>
    <string name="ic_crop_free">&#xe059;</string>
    <string name="ic_crop_landscape">&#xe05a;</string>
    <string name="ic_crop_portrait">&#xe05b;</string>
    <string name="ic_crop_square">&#xe05c;</string>
    <string name="ic_data_usage">&#xe05d;</string>
    <string name="ic_delete">&#xe05e;</string>
    <string name="ic_developer_mode">&#xe05f;</string>
    <string name="ic_dialpad">&#xe060;</string>
    <string name="ic_directions">&#xe061;</string>
    <string name="ic_directions_bike">&#xe062;</string>
    <string name="ic_directions_bus">&#xe063;</string>
    <string name="ic_directions_car">&#xe064;</string>
    <string name="ic_directions_subway">&#xe065;</string>
    <string name="ic_directions_train">&#xe066;</string>
    <string name="ic_directions_transit">&#xe067;</string>
    <string name="ic_directionswalk">&#xe068;</string>
    <string name="ic_disc_full">&#xe069;</string>
    <string name="ic_do_not_disturb">&#xe06a;</string>
    <string name="ic_dock">&#xe06b;</string>
    <string name="ic_domain">&#xe06c;</string>
    <string name="ic_done">&#xe06d;</string>
    <string name="ic_done_all">&#xe06e;</string>
    <string name="ic_drafts">&#xe06f;</string>
    <string name="ic_drive">&#xe070;</string>
    <string name="ic_drive_apk">&#xe071;</string>
    <string name="ic_drive_audio">&#xe072;</string>
    <string name="ic_drive_code">&#xe073;</string>
    <string name="ic_drive_document">&#xe074;</string>
    <string name="ic_drive_drawing">&#xe075;</string>
    <string name="ic_drive_eta">&#xe076;</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_drive_font">&#xe078;</string>
    <string name="ic_drive_form">&#xe079;</string>
    <string name="ic_drive_fusiontable">&#xe07a;</string>
    <string name="ic_drive_image">&#xe07b;</string>
    <string name="ic_drive_ms_excel">&#xe07c;</string>
    <string name="ic_drive_ms_powerpoint">&#xe07d;</string>
    <string name="ic_drive_ms_word">&#xe07e;</string>
    <string name="ic_drive_pdf">&#xe07f;</string>
    <string name="ic_drive_presentation">&#xe080;</string>
    <string name="ic_drive_script">&#xe081;</string>
    <string name="ic_drive_site">&#xe082;</string>
    <string name="ic_drive_spreadsheet">&#xe083;</string>
    <string name="ic_drive_video">&#xe084;</string>
    <string name="ic_drive_zip">&#xe085;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_error">&#xe088;</string>
    <string name="ic_event">&#xe089;</string>
    <string name="ic_exit_to_app">&#xe08a;</string>
    <string name="ic_expand_less">&#xe08b;</string>
    <string name="ic_expand_more">&#xe08c;</string>
    <string name="ic_explore">&#xe08d;</string>
    <string name="ic_extension">&#xe08e;</string>
    <string name="ic_fast_forward">&#xe08f;</string>
    <string name="ic_fast_rewind">&#xe090;</string>
    <string name="ic_favorite">&#xe091;</string>
    <string name="ic_favorite_outline">&#xe092;</string>
    <string name="ic_file_download">&#xe093;</string>
    <string name="ic_file_upload">&#xe094;</string>
    <string name="ic_filter">&#xe095;</string>
    <string name="ic_flag">&#xe096;</string>
    <string name="ic_flash_auto">&#xe097;</string>
    <string name="ic_flash_off">&#xe098;</string>
    <string name="ic_flash_on">&#xe099;</string>
    <string name="ic_flights">&#xe09a;</string>
    <string name="ic_flip_to_back">&#xe09b;</string>
    <string name="ic_flip_to_front">&#xe09c;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_folder_mydrive">&#xe09e;</string>
    <string name="ic_folder_shared">&#xe09f;</string>
    <string name="ic_forum">&#xe0a0;</string>
    <string name="ic_forward">&#xe0a1;</string>
    <string name="ic_fullscreen">&#xe0a2;</string>
    <string name="ic_fullscreen_exit">&#xe0a3;</string>
    <string name="ic_gamepad">&#xe0a4;</string>
    <string name="ic_games">&#xe0a5;</string>
    <string name="ic_gesture">&#xe0a6;</string>
    <string name="ic_glass">&#xe0a7;</string>
    <string name="ic_gmail">&#xe0a8;</string>
    <string name="ic_google">&#xe0a9;</string>
    <string name="ic_google_plus">&#xe0aa;</string>
    <string name="ic_gps_fixed">&#xe0ab;</string>
    <string name="ic_gps_not_fixed">&#xe0ac;</string>
    <string name="ic_gps_off">&#xe0ad;</string>
    <string name="ic_group">&#xe0ae;</string>
    <string name="ic_group_add">&#xe0af;</string>
    <string name="ic_hangout">&#xe0b0;</string>
    <string name="ic_hangout_video">&#xe0b1;</string>
    <string name="ic_hangout_video_off">&#xe0b2;</string>
    <string name="ic_headset">&#xe0b3;</string>
    <string name="ic_headset_mic">&#xe0b4;</string>
    <string name="ic_help">&#xe0b5;</string>
    <string name="ic_high_quality">&#xe0b6;</string>
    <string name="ic_history">&#xe0b7;</string>
    <string name="ic_home">&#xe0b8;</string>
    <string name="ic_hotel">&#xe0b9;</string>
    <string name="ic_https">&#xe0ba;</string>
    <string name="ic_image">&#xe0bb;</string>
    <string name="ic_import_export">&#xe0bc;</string>
    <string name="ic_inbox">&#xe0bd;</string>
    <string name="ic_info">&#xe0be;</string>
    <string name="ic_info_outline">&#xe0bf;</string>
    <string name="ic_invert_colors">&#xe0c0;</string>
    <string name="ic_italics">&#xe0c1;</string>
    <string name="ic_keep">&#xe0c2;</string>
    <string name="ic_keyboard">&#xe0c3;</string>
    <string name="ic_keyboard_alt">&#xe0c4;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_keyboard_arrow_up">&#xe0c8;</string>
    <string name="ic_keyboard_backspace">&#xe0c9;</string>
    <string name="ic_keyboard_capslock">&#xe0ca;</string>
    <string name="ic_search">&#xe142;</string>
    <string name="action_search">搜索</string>
    <string name="menu_search">查找</string>
    <string name="menu_add">添加</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_more">菜单</string>
    <string name="handle_detail_image">4.相关图片</string>
    <string name="handle_detail_result">5.处理情况</string>
    <string name="hint_handle_content">处理过程、处理结果描述</string>
    <string name="before_handle_image">处理前图片</string>
    <string name="after_handle_image">处理后图片</string>
    <string name="hint_search_content">请输入要搜索的内容</string>
    <string name="title_system_function">系统功能</string>
    <string name="title_cache_clear">缓存清理</string>
    <string name="title_speech">语音输入</string>
    <string name="title_check_version">检查更新</string>
    <string name="title_download_manager">下载管理</string>
    <string name="title_qr_code_scan">扫一扫</string>
    <string name="title_location_info">位置</string>
    <string name="title_user_info">用户中心</string>
    <string name="title_change_user">更换用户</string>
    <string name="title_setting">设置</string>
    <string name="action_clear_history_search">清空历史搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="tv_text_down_load_path">下载路径文件夹：</string>
    <string name="bt_text_delete">删除</string>
    <string name="bt_text_pause">暂停</string>
    <string name="bt_text_stop">停止</string>
    <string name="bt_text_download">下载</string>
</resources>