<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/action_refresh"
        android:icon="@drawable/ic_vector_refresh"
        android:title="@string/menu_refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/action_add"
        android:icon="@drawable/ic_vector_add"
        android:title="@string/menu_add"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/action_device"
        android:icon="@drawable/ic_vector_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_more"
        android:icon="@drawable/ic_vector_right_menu"
        android:title="@string/menu_more"
        app:showAsAction="always" />

</menu>
