<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.activity.DownLoadActivity">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_title_bar" />

    <TextView
        android:id="@+id/targetFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/tv_text_down_load_path"
        android:textSize="@dimen/system_size_16" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/targetFolder"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/removeAll"
            style="@style/AutoWrap"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_selector_color_primary_gray"
            android:onClick="onClick"
            android:text="@string/bt_text_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/system_size_14" />

        <Button
            android:id="@+id/pauseAll"
            style="@style/AutoWrap"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_selector_color_primary_gray"
            android:onClick="onClick"
            android:text="@string/bt_text_pause"
            android:textColor="@color/white"
            android:textSize="@dimen/system_size_14" />

        <Button
            android:id="@+id/stopAll"
            style="@style/AutoWrap"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_selector_color_primary_gray"
            android:onClick="onClick"
            android:text="@string/bt_text_stop"
            android:textColor="@color/white"
            android:textSize="@dimen/system_size_14" />

        <Button
            android:id="@+id/startAll"
            style="@style/AutoWrap"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_selector_color_primary_gray"
            android:onClick="onClick"
            android:text="@string/bt_text_download"
            android:textColor="@color/white"
            android:textSize="@dimen/system_size_14" />
    </LinearLayout>

</RelativeLayout>
