<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    style="@style/MatchMatch.Vertical"
    tools:context="com.handu.poweroperational.main.activity.SearchActivity">

    <include
        android:id="@+id/layout_top"
        layout="@layout/layout_title_bar" />

    <LinearLayout
        style="@style/MatchMatch.Vertical"
        android:layout_above="@+id/ll_delete_history_search"
        android:layout_below="@+id/layout_top"
        android:layout_margin="5dp">

        <LinearLayout
            style="@style/MatchWrap.Horizontal"
            android:layout_margin="5dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="center_vertical">

            <com.github.johnkil.print.PrintView
                style="@style/WrapWrap"
                android:padding="5dp"
                android:visibility="visible"
                app:iconColor="#ff4444"
                app:iconFont="fonts/material-icon-font.ttf"
                app:iconSize="20sp"
                app:iconText="@string/ic_search" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_search_content"
                style="@style/AutoWrap"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_search_content"
                android:minHeight="40dp"
                android:textSize="@dimen/system_size_14" />

            <ImageButton
                android:id="@+id/ibt_speech_search"
                style="@style/WrapWrap"
                android:layout_margin="10dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/ic_vector_voice_color_accent" />

            <TextView
                android:id="@+id/tv_search"
                style="@style/WrapWrap"
                android:padding="5dp"
                android:text="@string/action_search"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/system_size_14" />

        </LinearLayout>

        <TextView
            style="@style/MatchWrap"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/history_search"
            android:textColor="@color/black"
            android:textSize="@dimen/system_size_14" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            style="@style/MatchMatch"
            android:layout_marginTop="10dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete_history_search"
        style="@style/WrapWrap.Horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:minHeight="40dp"
        android:minWidth="200dp"
        android:visibility="visible">

        <com.github.johnkil.print.PrintView
            style="@style/WrapWrap"
            android:padding="5dp"
            android:visibility="visible"
            app:iconColor="#ff4444"
            app:iconFont="fonts/material-icon-font.ttf"
            app:iconSize="20sp"
            app:iconText="@string/ic_delete" />

        <TextView
            style="@style/WrapWrap"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/action_clear_history_search"
            android:textSize="@dimen/system_size_14" />

    </LinearLayout>

</RelativeLayout>
